--- a/SkillTrax/appsettings.json
+++ b/SkillTrax/appsettings.json
@@ -14,6 +14,6 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PizzaSite;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=SkillTrax;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
